<resources>
    <string name="app_name">My Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="my_notes">My Notes</string>
    <string name="fab">fab</string>
    <string name="title">Title</string>
    <string name="back_button">Back Button</string>
    <string name="save_button">Save Button</string>
    <string name="choose_color">Choose color</string>
    <string name="note">Note</string>
</resources>