<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/noteContentFragmentParent"

    tools:context=".fragments.AddFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/addToolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:src="@drawable/ic_back_arrow"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/back_button"
            android:id="@+id/btnBack"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save"
            android:padding="13dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/save_button"
            android:id="@+id/btnSave"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/addToolbar">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollview"
            android:fillViewport="true">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@null"
                    android:hint="Title"
                    android:id="@+id/etTitle"
                    android:inputType="none"
                    android:importantForAutofill="no"
                    android:textSize="22sp"/>

                <EditText
                    android:id="@+id/etNoteContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:hint="@string/note"
                    android:background="@null"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingTop="16dp"
                    android:textSize="16sp"
                    android:inputType="textMultiLine" />




            </LinearLayout>
                
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabColorPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:backgroundTint="@color/purple"
            android:contentDescription="fab Color Picker"
            app:borderWidth="0dp"
            android:src="@drawable/ic_baseline_color_lens" />



    </FrameLayout>
</RelativeLayout>