<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NoteFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true"
            android:id="@+id/app_bar_layout">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/my_notes"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="2dp"
                        android:id="@+id/my_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/my_title"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="15dp">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:id="@+id/search"
                            android:background="@drawable/rounded_search"
                            android:drawableStart="@drawable/ic_round_search"
                            android:drawablePadding="5dp"
                            android:imeOptions="actionSearch"
                            android:hint="@string/search"
                            android:paddingStart="18dp"
                            android:paddingBottom="5dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="18dp"
                            android:textSize="16sp"
                            android:importantForAutofill="no"
                            android:inputType="textFilter"
                            android:layout_weight="3" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="6dp"
            android:paddingTop="8dp"
            android:paddingEnd="6dp"
            android:clipToPadding="false"
            tools:listitem="@layout/note_layout"
            android:id="@+id/recyclerView"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingBottom="5dp"
            android:transitionGroup="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noNotes"
                android:src="@drawable/ic_no_data"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:navigateToAddFragment="@{true}"
            android:id="@+id/floatingActionButton"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/white"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/fab" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>